pkp/pkp-lib#7264 Rename variables

--- a/locale/cs_CZ/emails.po
+++ b/locale/cs_CZ/emails.po
@@ -26,10 +26,10 @@ msgstr ""
 "uživatelské jméno a heslo si prosím uschovejte, neboť je nezbytné pro "
 "přihlášení do Vašeho účtu.<br />\n"
 "<br />\n"
-"Vaše uživatelské jméno: {$username}<br />\n"
+"Vaše uživatelské jméno: {$recipientUsername}<br />\n"
 "Vaše nové heslo: {$password}<br />\n"
 "<br />\n"
-" {$principalContactSignature}"
+" {$signature}"
 
 msgid "emails.passwordReset.subject"
 msgstr "Heslo obnoveno"
@@ -49,9 +49,9 @@ msgstr ""
 "se nezmění. Pokud si heslo přejete obnovit, klikněte, prosím, na odkaz  "
 "níže.<br />\n"
 "<br />\n"
-"Obnovit mé heslo: {$url}<br />\n"
+"Obnovit mé heslo: {$passwordResetUrl}<br />\n"
 "<br />\n"
-" {$principalContactSignature}"
+" {$signature}"
 
 msgid "emails.passwordResetConfirm.subject"
 msgstr "Potvrzení obnovy hesla"
@@ -68,10 +68,10 @@ msgstr ""
 "<br />\n"
 "{$notificationContents}<br />\n"
 "<br />\n"
-"Odkaz: {$url}<br />\n"
+"Odkaz: {$notificationUrl}<br />\n"
 "<br />\n"
 "Toto je automaticky generovaný e-mail. Prosím neodpovídejte na něj.<br />\n"
-"{$principalContactSignature}"
+"{$signature}"
 
 msgid "emails.reviewRemindAuto.description"
 msgstr ""
@@ -82,7 +82,7 @@ msgstr ""
 
 msgid "emails.reviewRemindAuto.body"
 msgstr ""
-"{$reviewerName}:<br />\n"
+"{$recipientName}:<br />\n"
 "<br />\n"
 "Jen jemné připomenutí naší žádosti o recenzi podání, "
 "&quot;{$submissionTitle},&quot; pro {$contextName}. Doufali jsme, že tato "
@@ -94,14 +94,14 @@ msgstr ""
 "tento odkaz pro obnovení hesla (které vám pak bude zasláno e-mailem spolu s "
 "uživatelským jménem). {$passwordResetUrl}<br />\n"
 "<br />\n"
-"Adresa URL pro zasílání příspěvků: {$submissionReviewUrl}<br />\n"
+"Adresa URL pro zasílání příspěvků: {$reviewAssignmentUrl}<br />\n"
 "<br />\n"
-"Uživatelské jméno: {$reviewerUserName}<br />\n"
+"Uživatelské jméno: {$recipientUsername}<br />\n"
 "<br />\n"
 "Potvrďte, prosím, svou schopnost dokončit tento zásadní příspěvek k práci "
 "tisku. Těším se na Vaši odpověď.<br />\n"
 "<br />\n"
-"{$editorialContactSignature}"
+"{$signature}"
 
 msgid "emails.reviewRemindAuto.subject"
 msgstr "Automatické připomenutí recenze podání"
@@ -113,19 +113,19 @@ msgstr ""
 
 msgid "emails.reviewRemindOneclick.body"
 msgstr ""
-"{$reviewerName}:<br />\n"
+"{$recipientName}:<br />\n"
 "<br />\n"
 "Jen jemné připomenutí naší žádosti o recenzi podání, "
 "&quot;{$submissionTitle},&quot; pro {$contextName}. Doufali jsme, že tuto "
 "recenzi obdržíme do {$reviewDueDate}, a byli bychom rádi, kdybyste jej "
 "obdrželi, jakmile budete schopni ji připravit.<br />\n"
 "<br />\n"
-"Adresa URL pro zasílání příspěvků: {$submissionReviewUrl}<br />\n"
+"Adresa URL pro zasílání příspěvků: {$reviewAssignmentUrl}<br />\n"
 "<br />\n"
 "Potvrďte, prosím, svou schopnost dokončit tento zásadní příspěvek k práci "
 "tisku. Těším se na Vaši odpověď.<br />\n"
 "<br />\n"
-"{$editorialContactSignature}"
+"{$signature}"
 
 msgid "emails.reviewRemindOneclick.subject"
 msgstr "Připomenutí recenze podání"
@@ -137,7 +137,7 @@ msgstr ""
 
 msgid "emails.reviewRemind.body"
 msgstr ""
-"{$reviewerName}:<br />\n"
+"{$recipientName}:<br />\n"
 "<br />\n"
 "Jen jemné připomenutí naší žádosti o recenzi podání, "
 "&quot;{$submissionTitle},&quot; pro {$contextName}. Doufali jsme, že tuto "
@@ -148,14 +148,14 @@ msgstr ""
 "tento odkaz pro obnovení hesla (které vám pak bude zasláno e-mailem spolu s "
 "uživatelským jménem). {$passwordResetUrl}<br />\n"
 "<br />\n"
-"Adresa URL pro zasílání příspěvků: {$submissionReviewUrl}<br />\n"
+"Adresa URL pro zasílání příspěvků: {$reviewAssignmentUrl}<br />\n"
 "<br />\n"
-"Uživatelské jméno: {$reviewerUserName}<br />\n"
+"Uživatelské jméno: {$recipientUsername}<br />\n"
 "<br />\n"
 "Potvrďte, prosím, svou schopnost dokončit tento zásadní příspěvek k práci "
 "tisku. Těším se na Vaši odpověď.<br />\n"
 "<br />\n"
-"{$editorialContactSignature}"
+"{$signature}"
 
 msgid "emails.reviewRemind.subject"
 msgstr "Připomenutí recenze podání"
@@ -167,7 +167,7 @@ msgstr ""
 
 msgid "emails.reviewAck.body"
 msgstr ""
-"{$reviewerName}:<br />\n"
+"{$recipientName}:<br />\n"
 "<br />\n"
 "Děkujeme vám za dokončení recenze podání, &quot;{$submissionTitle},&quot; "
 "pro {$contextName}. Vážíme si Vašeho přínosu ke kvalitě námi publikovaných "
@@ -189,7 +189,7 @@ msgstr ""
 "&quot;{$submissionTitle},&quot; pro {$contextName}. Děkuji, že na mě "
 "myslíte, a příště se na mě klidně obraťte.<br />\n"
 "<br />\n"
-"{$reviewerName}"
+"{$senderName}"
 
 msgid "emails.reviewDecline.subject"
 msgstr "Nejsem schopný recenzovat"
@@ -208,7 +208,7 @@ msgstr ""
 "pro {$contextName}. Děkuji, že na mě myslíte, a plánuji, že recenzi dokončím "
 "do data jejího odevzdání, {$reviewDueDate}, pokud ne dříve.<br />\n"
 "<br />\n"
-"{$reviewerName}"
+"{$senderName}"
 
 msgid "emails.reviewConfirm.subject"
 msgstr "Schopný recenzovat"
@@ -220,7 +220,7 @@ msgstr ""
 
 msgid "emails.reviewReinstate.body"
 msgstr ""
-"{$reviewerName}:<br />\n"
+"{$recipientName}:<br />\n"
 "<br />\n"
 "Rádi bychom obnovili naši žádost o recenzi podání, "
 "&quot;{$submissionTitle},&quot; pro {$contextName}. Doufáme, že budete "
@@ -238,7 +238,7 @@ msgstr ""
 
 msgid "emails.reviewCancel.body"
 msgstr ""
-"{$reviewerName}:<br />\n"
+"{$recipientName}:<br />\n"
 "<br />\n"
 "V tuto chvíli jsme se rozhodli zrušit naši žádost o recenzi podání, "
 "&quot;{$submissionTitle},&quot; pro {$contextName}. Omlouváme se za "
@@ -261,7 +261,7 @@ msgstr ""
 
 msgid "emails.reviewRequestAttached.body"
 msgstr ""
-"{$reviewerName}:<br />\n"
+"{$recipientName}:<br />\n"
 "<br />\n"
 "Věřím, že byste byl vynikajícím recenzentem rukopisu, "
 "&quot;{$submissionTitle},&quot; a žádám Vás, abyste zvážil, zda se tohoto "
@@ -270,12 +270,12 @@ msgstr ""
 "posouzení podání spolu s doporučením mi zašlete e-mailem do "
 "{$reviewDueDate}.<br />\n"
 "<br />\n"
-"Do {$weekLaterDate} prosím ve zpětném e-mailu uveďte, zda jste schopni a "
+"Do {$responseDueDate} prosím ve zpětném e-mailu uveďte, zda jste schopni a "
 "ochotni recenzi provést.<br />\n"
 "<br />\n"
 "Děkuji za zvážení této žádosti.<br />\n"
 "<br />\n"
-"{$editorialContactSignature}<br />\n"
+"{$signature}<br />\n"
 "<br />\n"
 "<br />\n"
 "Pokyny pro přezkoumání<br />\n"
@@ -285,16 +285,16 @@ msgstr ""
 msgid "emails.reviewRequestAttached.subject"
 msgstr "Žádost o recenzi rukopisu"
 
-msgid "emails.reviewRequestRemindAutoOneclick.description"
+msgid "emails.reviewResponseOverdueAutoOneclick.description"
 msgstr ""
 "Tento e-mail se automaticky odešle, jakmile uplyne termín potvrzení "
 "recenzenta (viz Možnosti recenzování v části Nastavení > Pracovní postupy > "
 "Recenzování) a je povolen přístup recenzenta jedním kliknutím. Naplánované "
 "úlohy musí být povoleny a nakonfigurovány (viz konfigurační soubor webu)."
 
-msgid "emails.reviewRequestRemindAutoOneclick.body"
+msgid "emails.reviewResponseOverdueAutoOneclick.body"
 msgstr ""
-"{$reviewerName}:<br />\n"
+"{$recipientName}:<br />\n"
 "Jen jemné připomenutí naší žádosti o přezkoumání podání, "
 "&quot;{$submissionTitle},&quot; pro {$contextName}. Doufali jsme, že Vaši "
 "odpověď obdržíme do {$responseDueDate}, a tento e-mail byl automaticky "
@@ -310,11 +310,11 @@ msgstr ""
 "<br />\n"
 "Samotný posudek je třeba předložit do {$reviewDueDate}.<br />\n"
 "<br />\n"
-"Adresa URL podání: {$submissionReviewUrl}<br />\n"
+"Adresa URL podání: {$reviewAssignmentUrl}<br />\n"
 "<br />\n"
 "Děkujeme za zvážení této žádosti.<br />\n"
 "<br />\n"
-"{$editorialContactSignature}<br />\n"
+"{$signature}<br />\n"
 "<br />\n"
 "<br />\n"
 "<br />\n"
@@ -323,19 +323,19 @@ msgstr ""
 "{$abstractTermIfEnabled}<br />\n"
 "{$submissionAbstract}"
 
-msgid "emails.reviewRequestRemindAutoOneclick.subject"
+msgid "emails.reviewResponseOverdueAutoOneclick.subject"
 msgstr "Žádost o recenzi rukopisu"
 
-msgid "emails.reviewRequestRemindAuto.description"
+msgid "emails.reviewResponseOverdueAuto.description"
 msgstr ""
 "Tento e-mail se automaticky odešle, když uplyne termín potvrzení recenzenta ("
 "viz Možnosti recenze v části Nastavení > Pracovní postupy > Recenze) a je "
 "zakázán přístup recenzenta jedním kliknutím. Naplánované úlohy musí být "
 "povoleny a nakonfigurovány (viz konfigurační soubor webu)."
 
-msgid "emails.reviewRequestRemindAuto.body"
+msgid "emails.reviewResponseOverdueAuto.body"
 msgstr ""
-"Vážený {$reviewerName},<br />\n"
+"Vážený {$recipientName},<br />\n"
 "Jen jemně připomínáme naši žádost o přezkoumání podání, "
 "&quot;{$submissionTitle},&quot; pro {$contextName}. Doufali jsme, že Vaši "
 "odpověď obdržíme do {$responseDueDate}, a tento e-mail byl automaticky "
@@ -349,17 +349,17 @@ msgstr ""
 "<br />\n"
 "Samotný posudek je třeba podat do {$reviewDueDate}.<br />\n"
 "<br />\n"
-"Adresa URL podání: {$submissionReviewUrl}<br />\n"
+"Adresa URL podání: {$reviewAssignmentUrl}<br />\n"
 "<br />\n"
-"Uživatelské jméno: {$reviewerUserName}<br />\n"
+"Uživatelské jméno: {$recipientUsername}<br />\n"
 "<br />\n"
 "Děkujeme za zvážení této žádosti.<br />\n"
 "<br />\n"
 "<br />\n"
 "S pozdravem,<br />\n"
-"{$editorialContactSignature}<br />\n"
+"{$signature}<br />\n"
 
-msgid "emails.reviewRequestRemindAuto.subject"
+msgid "emails.reviewResponseOverdueAuto.subject"
 msgstr "Žádost o recenzi rukopisu"
 
 msgid "emails.reviewRequestOneclick.description"
@@ -373,24 +373,24 @@ msgstr ""
 
 msgid "emails.reviewRequestOneclick.body"
 msgstr ""
-"{$reviewerName}:<br />\n"
+"{$recipientName}:<br />\n"
 "<br />\n"
 "Domnívám se, že byste byl/a vynikajícím recenzentem rukopisu, "
 "&quot;{$submissionTitle},&quot; který byl zaslán do {$contextName}. Abstrakt "
 "příspěvku je vložen níže a doufám, že zvážíte, zda se tohoto důležitého "
 "úkolu pro nás ujmete.<br />\n"
 "<br />\n"
-"Prosím, přihlaste se na webové stránky tisku do {$weekLaterDate}, abyste "
+"Prosím, přihlaste se na webové stránky tisku do {$responseDueDate}, abyste "
 "uvedli, zda se ujmete recenze, či nikoli, a také abyste měli přístup k "
 "podání a mohli zaznamenat svůj posudek a doporučení.<br />\n"
 "<br />\n"
 "Samotný posudek je třeba předložit do {$reviewDueDate}.<br />\n"
 "<br />\n"
-"Adresa URL podání: {$submissionReviewUrl}<br />\n"
+"Adresa URL podání: {$reviewAssignmentUrl}<br />\n"
 "<br />\n"
 "Děkujeme za zvážení této žádosti.<br />\n"
 "<br />\n"
-"{$editorialContactSignature}<br />\n"
+"{$signature}<br />\n"
 "<br />\n"
 "<br />\n"
 "<br />\n"
@@ -413,7 +413,7 @@ msgstr ""
 
 msgid "emails.reviewRequest.body"
 msgstr ""
-"Vážený {$reviewerName},<br />\n"
+"Vážený {$recipientName},<br />\n"
 "<br />\n"
 "{$messageToReviewer}<br />\n"
 "<br />\n"
@@ -423,15 +423,15 @@ msgstr ""
 "<br />\n"
 "Samotný posudek je třeba předložit do {$reviewDueDate}.<br />\n"
 "<br />\n"
-"Adresa URL podání: {$submissionReviewUrl}<br />\n"
+"Adresa URL podání: {$reviewAssignmentUrl}<br />\n"
 "<br />\n"
-"Uživatelské jméno: {$reviewerUserName}<br />\n"
+"Uživatelské jméno: {$recipientUsername}<br />\n"
 "<br />\n"
 "Děkujeme za zvážení této žádosti.<br />\n"
 "<br />\n"
 "<br />\n"
 "S pozdravem,<br />\n"
-"{$editorialContactSignature}<br />\n"
+"{$signature}<br />\n"
 
 msgid "emails.reviewRequest.subject"
 msgstr "Žádost o recenzi rukopisu"
@@ -444,14 +444,14 @@ msgstr ""
 
 msgid "emails.editorAssign.body"
 msgstr ""
-"{$editorialContactName}: <br />\n"
+"{$recipientName}: <br />\n"
 "<br />\n"
 "Příspěvek, &quot;{$submissionTitle},&quot; do {$contextName}, vám byl "
 "přidělen, abyste na něj dohlédli v rámci redakčního procesu v roli editora.<"
 "br />\n"
 "<br />\n"
 "URL pro odeslání: {$submissionUrl} <br />\n"
-"Uživatelské jméno: {$editorUsername} <br />\n"
+"Uživatelské jméno: {$recipientUsername} <br />\n"
 "<br />\n"
 "Děkujeme,"
 
@@ -473,7 +473,7 @@ msgstr ""
 "Máte-li jakékoli dotazy, kontaktujte mě. Děkujeme, že jste tento tisk "
 "považovali za příležitost pro svou práci. <br />\n"
 "<br />\n"
-"{$editorialContactSignature}"
+"{$signature}"
 
 msgid "emails.submissionAckNotUser.subject"
 msgstr "Potvrzení Podání"
@@ -486,7 +486,7 @@ msgstr ""
 
 msgid "emails.submissionAck.body"
 msgstr ""
-"{$authorName}: <br />\n"
+"{$recipientName}: <br />\n"
 "<br />\n"
 "Děkujeme vám za odeslání rukopisu &quot; {$submissionTitle} &quot; do "
 "{$contextName}. Díky online systému pro správu tisku, který používáme, "
@@ -494,23 +494,23 @@ msgstr ""
 "stránku pro tisk: <br />\n"
 "<br />\n"
 "URL rukopisu: {$submissionUrl} <br />\n"
-"Uživatelské jméno: {$authorUsername} <br />\n"
+"Uživatelské jméno: {$recipientUsername} <br />\n"
 "<br />\n"
 "Máte-li jakékoli dotazy, kontaktujte mě. Děkujeme, že jste tento tisk "
 "považovali za příležitost pro svou práci. <br />\n"
 "<br />\n"
-"{$editorialContactSignature}"
+"{$signature}"
 
 msgid "emails.submissionAck.subject"
 msgstr "Potvrzení Podání"
 
-msgid "emails.publishNotify.description"
+msgid "emails.issuePublishNotify.description"
 msgstr ""
 "Tento e-mail se zasílá registrovaným čtenářům prostřednictvím odkazu „"
 "Upozornit uživatele“ na domovské stránce editora. Upozorní čtenáře na novou "
 "knihu a vyzve je k návštěvě tisku na dodané adrese URL."
 
-msgid "emails.publishNotify.body"
+msgid "emails.issuePublishNotify.body"
 msgstr ""
 "Čtenáři: <br />\n"
 "<br />\n"
@@ -519,9 +519,9 @@ msgstr ""
 "stránky, kde můžete recenzovat monografie a předmět vašeho zájmu. <br />\n"
 "<br />\n"
 "Děkujeme za trvalý zájem o naši práci, <br />\n"
-"{$editorialContactSignature}"
+"{$signature}"
 
-msgid "emails.publishNotify.subject"
+msgid "emails.issuePublishNotify.subject"
 msgstr "Byla vydána nová kniha"
 
 msgid "emails.reviewerRegister.description"
@@ -544,11 +544,11 @@ msgstr ""
 "chtít například aktualizovat svůj profil, včetně svých recenzních zájmů. <br "
 "/>\n"
 "<br />\n"
-"Uživatelské jméno: {$username} <br />\n"
+"Uživatelské jméno: {$recipientUsername} <br />\n"
 "Heslo: {$password} <br />\n"
 "<br />\n"
 "Děkuji, <br />\n"
-"{$principalContactSignature}"
+"{$signature}"
 
 msgid "emails.reviewerRegister.subject"
 msgstr "Registrace jako recenzent v {$contextName}"
@@ -560,7 +560,7 @@ msgstr ""
 
 msgid "emails.userValidate.body"
 msgstr ""
-"{$userFullName} <br />\n"
+"{$recipientName} <br />\n"
 "<br />\n"
 "Vytvořil jste účet s {$contextName}, ale než jej budete moci začít používat, "
 "musíte ověřit svůj e-mailový účet. Chcete-li to provést, jednoduše "
@@ -569,7 +569,7 @@ msgstr ""
 "{$activatedUrl} <br />\n"
 "<br />\n"
 "Děkuji, <br />\n"
-"{$principalContactSignature}"
+"{$signature}"
 
 msgid "emails.userValidate.subject"
 msgstr "Ověřte svůj účet"
@@ -581,7 +581,7 @@ msgstr ""
 
 msgid "emails.userRegister.body"
 msgstr ""
-"{$userFullName}<br />\n"
+"{$recipientName}<br />\n"
 "<br />\n"
 "Nyní jste byl zaregistrován jako uživatel v {$contextName}. Do tohoto e-"
 "mailu jsme zahrnuli vaše uživatelské jméno a heslo, které jsou potřebné pro "
@@ -589,11 +589,11 @@ msgstr ""
 "můžete požádat o odebrání ze seznamu uživatelů tak, že mě kontaktujete. <br "
 "/>\n"
 "<br />\n"
-"Uživatelské jméno: {$username} <br />\n"
+"Uživatelské jméno: {$recipientUsername} <br />\n"
 "Heslo: {$password} <br />\n"
 "<br />\n"
 "Děkuji, <br />\n"
-"{$principalContactSignature}"
+"{$signature}"
 
 msgid "emails.userRegister.subject"
 msgstr "Registrace tisku"
@@ -639,7 +639,7 @@ msgstr ""
 
 msgid "emails.editorDecisionDecline.body"
 msgstr ""
-"{$authorName}:<br />\n"
+"{$authors}:<br />\n"
 "<br />\n"
 "Dospěli jsme k rozhodnutí ohledně vašeho podání do {$contextName}, "
 "&quot;{$submissionTitle}&quot;.<br />\n"
@@ -658,7 +658,7 @@ msgstr ""
 
 msgid "emails.editorDecisionResubmit.body"
 msgstr ""
-"{$authorName}:<br />\n"
+"{$authors}:<br />\n"
 "<br />\n"
 "Dospěli jsme k rozhodnutí ohledně vašeho podání do {$contextName}, "
 "&quot;{$submissionTitle}&quot;.<br />\n"
@@ -677,7 +677,7 @@ msgstr ""
 
 msgid "emails.editorDecisionRevisions.body"
 msgstr ""
-"{$authorName}:<br />\n"
+"{$authors}:<br />\n"
 "<br />\n"
 "Dospěli jsme k rozhodnutí ohledně vašeho podání do {$contextName}, "
 "&quot;{$submissionTitle}&quot;.<br />\n"
@@ -696,7 +696,7 @@ msgstr ""
 
 msgid "emails.editorDecisionSendToProduction.body"
 msgstr ""
-"{$authorName}:<br />\n"
+"{$authors}:<br />\n"
 "<br />\n"
 "Úprava vašeho rukopisu, &quot;{$submissionTitle},&quot; je dokončena.  Nyní "
 "jej odesíláme do výroby.<br />\n"
@@ -713,7 +713,7 @@ msgstr ""
 
 msgid "emails.editorDecisionSendToExternal.body"
 msgstr ""
-"{$authorName}:<br />\n"
+"{$authors}:<br />\n"
 "<br />\n"
 "Dospěli jsme k rozhodnutí ohledně vašeho podání do {$contextName}, "
 "&quot;{$submissionTitle}&quot;.<br />\n"
@@ -732,7 +732,7 @@ msgstr ""
 
 msgid "emails.editorDecisionAccept.body"
 msgstr ""
-"{$authorName}:<br />\n"
+"{$authors}:<br />\n"
 "<br />\n"
 "Dospěli jsme k rozhodnutí ohledně vašeho podání do {$contextName}, "
 "&quot;{$submissionTitle}&quot;.<br />\n"
@@ -753,7 +753,7 @@ msgstr ""
 
 msgid "emails.reviewRemindAutoOneclick.body"
 msgstr ""
-"{$reviewerName}:<br />\n"
+"{$recipientName}:<br />\n"
 "<br />\n"
 "Jen jemné připomenutí naší žádosti o recenzi podání, "
 "&quot;{$submissionTitle},&quot; pro {$contextName}. Doufali jsme, že tato "
@@ -761,12 +761,12 @@ msgstr ""
 "vygenerován a odeslán s uplynutím tohoto data. Přesto bychom byli rádi, "
 "kdybyste ji obdrželi, jakmile ji budete schopni připravit.<br />\n"
 "<br />\n"
-"URL pro zasílání příspěvků: {$submissionReviewUrl}<br />\n"
+"URL pro zasílání příspěvků: {$reviewAssignmentUrl}<br />\n"
 "<br />\n"
 "Potvrďte, prosím, svou schopnost dokončit tento zásadní příspěvek k tisku. "
 "Těším se na Vaši odpověď.<br />\n"
 "<br />\n"
-"{$editorialContactSignature}"
+"{$signature}"
 
 msgid "emails.reviewRemindAutoOneclick.subject"
 msgstr "Automatické připomenutí recenze podání"
