--- a/locale/gl_ES/emails.po
+++ b/locale/gl_ES/emails.po
@@ -22,13 +22,13 @@ msgstr ""
 
 msgid "emails.editorAssign.body"
 msgstr ""
-"{$editorialContactName}:<br />\n"
+"{$recipientName}:<br />\n"
 "<br />\n"
 "O envío, &quot; {$submissionTitle}, &quot; a {$contextName} asignóuselle "
 "como Editor para levar a cabo o proceso editorial completo.<br />\n"
 "<br />\n"
 "URL do envío: {$submissionUrl} <br />\n"
-"Nome de usuario: {$editorUsername} <br />\n"
+"Nome de usuario: {$recipientUsername} <br />\n"
 "<br />\n"
 "Grazas,"
 
@@ -51,7 +51,7 @@ msgstr ""
 "Se tes algunha dúbida, ponte en contacto comigo. Grazas por considerar esta "
 "editorial como o lugar para amosar o teu traballo.<br />\n"
 "<br />\n"
-"{$editorialContactSignature}"
+"{$signature}"
 
 msgid "emails.submissionAckNotUser.subject"
 msgstr "Agradecemento do envío"
@@ -65,7 +65,7 @@ msgstr ""
 
 msgid "emails.submissionAck.body"
 msgstr ""
-"{$authorName}:<br />\n"
+"{$recipientName}:<br />\n"
 "<br />\n"
 "Grazas por enviar o manuscrito, &quot; {$submissionTitle} &quot; a "
 "{$contextName}. Co sistema de xestión de editorial en liña que estamos a "
@@ -73,23 +73,23 @@ msgstr ""
 "sitio web da editora:<br />\n"
 "<br />\n"
 "URL do manuscrito: {$submissionUrl}<br />\n"
-"Nome de usuario: {$authorUsername}<br />\n"
+"Nome de usuario: {$recipientUsername}<br />\n"
 "<br />\n"
 "Se tes algunha dúbida, ponte en contacto comigo. Grazas por considerar esta "
 "editorial como o vehículo para amosar o teu traballo.<br />\n"
 "<br />\n"
-"{$editorialContactSignature}"
+"{$signature}"
 
 msgid "emails.submissionAck.subject"
 msgstr "Agradecemento do envío"
 
-msgid "emails.publishNotify.description"
+msgid "emails.issuePublishNotify.description"
 msgstr ""
 "Este correo electrónico envíase aos lectores/as rexistrados/as a través da "
 "ligazón \"Notificar aos usuarios\" na páxina do Editor. Avisa aos lectores "
 "da publicación dun novo libro e invítalles a visitar a páxina da editorial."
 
-msgid "emails.publishNotify.body"
+msgid "emails.issuePublishNotify.body"
 msgstr ""
 "Lectores/as:<br />\n"
 "<br />\n"
@@ -98,9 +98,9 @@ msgstr ""
 "para revisar monografías e elementos do seu interese.<br />\n"
 "<br />\n"
 "Grazas polo interese no noso traballo,<br />\n"
-"{$editorialContactSignature}"
+"{$signature}"
 
-msgid "emails.publishNotify.subject"
+msgid "emails.issuePublishNotify.subject"
 msgstr "Novo libro publicado"
 
 msgid "emails.reviewerRegister.description"
@@ -125,11 +125,11 @@ msgstr ""
 "por exemplo, actualizar o seu perfil, incluídos os seus intereses de "
 "revisión.<br />\n"
 "<br />\n"
-"Nome de usuario: {$username} <br />\n"
+"Nome de usuario: {$recipientUsername} <br />\n"
 "Contrasinal: {$password}<br />\n"
 "<br />\n"
 "Grazas,<br />\n"
-"{$principalContactSignature}"
+"{$signature}"
 
 msgid "emails.reviewerRegister.subject"
 msgstr "Rexistro como revisor/a en {$contextName}"
@@ -142,7 +142,7 @@ msgstr ""
 
 msgid "emails.userValidate.body"
 msgstr ""
-"{$userFullName}<br />\n"
+"{$recipientName}<br />\n"
 "<br />\n"
 "Creaches unha conta con {$contextName}. Antes de comezar a usala debes "
 "validar a túa conta de correo electrónico. Para iso, só tes que seguir a "
@@ -151,7 +151,7 @@ msgstr ""
 "{$activateUrl}<br />\n"
 "<br />\n"
 "Grazas,<br />\n"
-"{$principalContactSignature}"
+"{$signature}"
 
 msgid "emails.userValidate.subject"
 msgstr "Validar a túa conta"
@@ -164,7 +164,7 @@ msgstr ""
 
 msgid "emails.userRegister.body"
 msgstr ""
-"{$userFullName}<br />\n"
+"{$recipientName}<br />\n"
 "<br />\n"
 "Rexistrouse como usuario/a con {$contextName}. Incluímos o seu nome de "
 "usuario e contrasinal neste correo electrónico, que son necesarios para todo "
@@ -172,11 +172,11 @@ msgstr ""
 "momento, pode solicitar que se elimine da lista de usuarios contactando "
 "comigo.<br />\n"
 "<br />\n"
-"Nome de usuario: {$username} <br />\n"
+"Nome de usuario: {$recipientUsername} <br />\n"
 "Contrasinal: {$password} <br />\n"
 "<br />\n"
 "Grazas, <br />\n"
-"{$principalContactSignature}"
+"{$signature}"
 
 msgid "emails.userRegister.subject"
 msgstr "Rexistro na editorial"
@@ -192,10 +192,10 @@ msgstr ""
 "O seu contrasinal restableceuse correctamente para usalo no sitio web "
 "{$siteTitle}. <br />\n"
 "<br />\n"
-"O seu nome de usuario: {$username} <br />\n"
+"O seu nome de usuario: {$recipientUsername} <br />\n"
 "O seu novo contrasinal: {$password} <br />\n"
 "<br />\n"
-"{$principalContactSignature}"
+"{$signature}"
 
 msgid "emails.passwordReset.subject"
 msgstr "Restablecer o contrasinal"
@@ -215,9 +215,9 @@ msgstr ""
 "contrasinal non se cambiará. Se desexa restablecer o seu contrasinal, faga "
 "clic no seguinte URL.<br />\n"
 "<br />\n"
-"Restablecer o meu contrasinal: {$url}<br />\n"
+"Restablecer o meu contrasinal: {$passwordResetUrl}<br />\n"
 "<br />\n"
-"{$principalContactSignature}"
+"{$signature}"
 
 msgid "emails.passwordResetConfirm.subject"
 msgstr "Confirmación de restablecemento do contrasinal"
@@ -233,18 +233,18 @@ msgstr ""
 "<br />\n"
 "{$notificationContents}<br />\n"
 "<br />\n"
-"Ligazón: {$url}<br />\n"
+"Ligazón: {$notificationUrl}<br />\n"
 "<br />\n"
 "Isto é un correo electrónico xerado de xeito automático; non responda a esta "
 "mensaxe.<br />\n"
-"{$principalContactSignature}<hr />{$unsubscribeLink}"
+"{$signature}<hr />{$unsubscribeLink}"
 
 msgid "emails.notification.subject"
 msgstr "Nova notificación de {$siteTitle}"
 
 msgid "emails.reviewRequest.body"
 msgstr ""
-"Estimado {$reviewerName}, <br />\n"
+"Estimado {$recipientName}, <br />\n"
 "<br />\n"
 "{$messageToReviewer} <br />\n"
 "<br />\n"
@@ -254,15 +254,15 @@ msgstr ""
 "<br />\n"
 "Prazo de envío da revisión {$reviewDueDate}.<br />\n"
 "<br />\n"
-"URL do envío: {$submissionReviewUrl} <br />\n"
+"URL do envío: {$reviewAssignmentUrl} <br />\n"
 "<br />\n"
-"Nome de usuario: {$reviewerUserName} <br />\n"
+"Nome de usuario: {$recipientUsername} <br />\n"
 "<br />\n"
 "Grazas por considerar esta solicitude. <br />\n"
 "<br />\n"
 "<br />\n"
 "Atentamente, <br />\n"
-"{$editorialContactSignature} <br />\n"
+"{$signature} <br />\n"
 
 msgid "emails.reviewRemindAutoOneclick.subject"
 msgstr "Recordatorio automático de revisión do envío"
@@ -277,7 +277,7 @@ msgstr ""
 
 msgid "emails.reviewRemindAuto.body"
 msgstr ""
-"{$reviewerName}: <br />\n"
+"{$recipientName}: <br />\n"
 "<br />\n"
 "Só un recordatorio da solicitude de revisión do envío "
 "&quot;{$submissionTitle}&quot; para {$contextName}. Agardabamos recibir esta "
@@ -290,14 +290,14 @@ msgstr ""
 "correo electrónico xunto co seu nome de usuario). {$passwordResetUrl} <br />"
 "\n"
 "<br />\n"
-"URL do envío: {$submissionReviewUrl} <br />\n"
+"URL do envío: {$reviewAssignmentUrl} <br />\n"
 "<br />\n"
-"Nome de usuario: {$reviewerUserName} <br />\n"
+"Nome de usuario: {$recipientUsername} <br />\n"
 "<br />\n"
 "Confirme a súa capacidade para completar esta contribución ao traballo da "
 "editorial. Ficamos a espera do seu contacto. <br />\n"
 "<br />\n"
-"{$editorialContactSignature}"
+"{$signature}"
 
 msgid "emails.reviewRemindAuto.subject"
 msgstr "Recordatorio automático de revisión do envío"
@@ -309,7 +309,7 @@ msgstr ""
 
 msgid "emails.reviewRemind.body"
 msgstr ""
-"{$reviewerName}: <br />\n"
+"{$recipientName}: <br />\n"
 "<br />\n"
 "Só un recordatorio da solicitude de revisión do envío "
 "&quot;{$submissionTitle}&quot; para {$contextName}. Agardabamos recibir esta "
@@ -321,30 +321,30 @@ msgstr ""
 "correo electrónico xunto co seu nome de usuario). {$passwordResetUrl} <br />"
 "\n"
 "<br />\n"
-"URL do envío: {$submissionReviewUrl} <br />\n"
+"URL do envío: {$reviewAssignmentUrl} <br />\n"
 "<br />\n"
-"Nome de usuario: {$reviewerUserName} <br />\n"
+"Nome de usuario: {$recipientUsername} <br />\n"
 "<br />\n"
 "Confirme a súa capacidade para completar esta contribución ao traballo da "
 "editorial. Ficamos a espera do seu contacto.. <br />\n"
 "<br />\n"
-"{$editorialContactSignature}"
+"{$signature}"
 
 msgid "emails.reviewRemindOneclick.body"
 msgstr ""
-"{$reviewerName}: <br />\n"
+"{$recipientName}: <br />\n"
 "<br />\n"
 "Só un recordatorio da solicitude de revisión do envío "
 "&quot;{$submissionTitle}&quot; para {$contextName}. Agardabamos recibir esta "
 "revisión antes do {$reviewDueDate} e estaríamos encantados de recibila en "
 "canto a teña preparada. <br />\n"
 "<br />\n"
-"URL do envío: {$submissionReviewUrl} <br />\n"
+"URL do envío: {$reviewAssignmentUrl} <br />\n"
 "<br />\n"
 "Confirme a súa capacidade para completar esta contribución ao traballo da "
 "editorial. Ficamos a espera do seu contacto. <br />\n"
 "<br />\n"
-"{$editorialContactSignature}"
+"{$signature}"
 
 msgid "emails.reviewRemindOneclick.subject"
 msgstr "Recordatorio de revisión do envío"
@@ -364,7 +364,7 @@ msgstr ""
 
 msgid "emails.reviewAck.body"
 msgstr ""
-"{$reviewerName}: <br />\n"
+"{$recipientName}: <br />\n"
 "<br />\n"
 "Grazas por completar a revisión do envío &quot;{$submissionTitle}&quot; para "
 "{$contextName}. Agradecemos a túa contribución á calidade do traballo que "
@@ -381,13 +381,13 @@ msgstr ""
 
 msgid "emails.reviewDecline.body"
 msgstr ""
-"{$editorialContactName}: <br />\n"
+"{$recipientName}: <br />\n"
 "<br />\n"
 "Temo que neste momento non podo revisar o envío "
 "&quot;{$submissionTitle}&quot; para {$contextName}. Grazas por pensar en min "
 "e noutra ocasión non dubides en chamarme. <br />\n"
 "<br />\n"
-"{$reviewerName}"
+"{$senderName}"
 
 msgid "emails.reviewDecline.subject"
 msgstr "Non dispoñibel para revisar"
@@ -400,13 +400,13 @@ msgstr ""
 
 msgid "emails.reviewConfirm.body"
 msgstr ""
-"{$editorialContactName}: <br />\n"
+"{$recipientName}: <br />\n"
 "<br />\n"
 "Podo e estou disposto a revisar o envío, &quot;{$submissionTitle}&quot; para "
 "{$contextName}. Grazas por pensar en min e penso que podo rematar a revisión "
 "no prazo establecido, {$ reviewDueDate}, se non antes. <br />\n"
 "<br />\n"
-"{$reviewerName}"
+"{$senderName}"
 
 msgid "emails.reviewConfirm.subject"
 msgstr "Dispoñibel para revisar"
@@ -418,7 +418,7 @@ msgstr ""
 
 msgid "emails.reviewReinstate.body"
 msgstr ""
-"{$reviewerName}: <br />\n"
+"{$recipientName}: <br />\n"
 "<br />\n"
 "Queremos restablecer a solicitude para que revises o envío, "
 "&quot;{$submissionTitle}&quot; para {$contextName}. Agardamos que poidas "
@@ -436,7 +436,7 @@ msgstr ""
 
 msgid "emails.reviewCancel.body"
 msgstr ""
-"{$reviewerName}: <br />\n"
+"{$recipientName}: <br />\n"
 "<br />\n"
 "Neste momento decidimos cancelar a nosa solicitude para que revises o envío, "
 "&quot;{$submissionTitle}&quot; para {$contextName}. Desculpa as molestias "
@@ -458,7 +458,7 @@ msgstr ""
 
 msgid "emails.reviewRequestAttached.body"
 msgstr ""
-"{$reviewerName}: <br />\n"
+"{$recipientName}: <br />\n"
 "<br />\n"
 "Creo que podes ser un excelente revisor do manuscrito, "
 "&quot;{$submissionTitle}&quot; e pídoche que consideres emprender esta "
@@ -467,12 +467,12 @@ msgstr ""
 "do envío, xunto coa túa recomendación, debes envialas por correo electrónico "
 "antes do {$reviewDueDate}. <br />\n"
 "<br />\n"
-"Indica nun correo electrónico antes do {$weekLaterDate} se es capaz e estás "
+"Indica nun correo electrónico antes do {$responseDueDate} se es capaz e estás "
 "disposto a facer a revisión. <br />\n"
 "<br />\n"
 "Grazas por considerar esta solicitude. <br />\n"
 "<br />\n"
-"{$editorialContactSignature} <br />\n"
+"{$signature} <br />\n"
 "<br />\n"
 "<br />\n"
 "Directrices de revisión <br />\n"
@@ -482,7 +482,7 @@ msgstr ""
 msgid "emails.reviewRequestAttached.subject"
 msgstr "Solicitude de revisión do manuscrito"
 
-msgid "emails.reviewRequestRemindAutoOneclick.description"
+msgid "emails.reviewResponseOverdueAutoOneclick.description"
 msgstr ""
 "Este correo electrónico envíase automaticamente cando transcorre a data "
 "límite da confirmación dun revisor/a (ver Opcións de revisión en "
@@ -490,9 +490,9 @@ msgstr ""
 "está habilitado. As tarefas programadas deben estar habilitadas e "
 "configuradas (consulte o arquivo de configuración do sitio)."
 
-msgid "emails.reviewRequestRemindAutoOneclick.body"
+msgid "emails.reviewResponseOverdueAutoOneclick.body"
 msgstr ""
-"{$reviewerName}:<br />\n"
+"{$recipientName}:<br />\n"
 "Só un recordatorio da nosa solicitude de revisión do envío, "
 "&quot;{$submissionTitle}&quot; para {$contextName}. Esperabamos ter a túa "
 "resposta antes do {$responseDueDate}, e este correo electrónico xerouse e "
@@ -508,11 +508,11 @@ msgstr ""
 "<br />\n"
 "O prazo da revisión é {$reviewDueDate}. <br />\n"
 "<br />\n"
-"URL do envío: {$submissionReviewUrl} <br />\n"
+"URL do envío: {$reviewAssignmentUrl} <br />\n"
 "<br />\n"
 "Grazas por considerar esta solicitude. <br />\n"
 "<br />\n"
-"{$editorialContactSignature} <br />\n"
+"{$signature} <br />\n"
 "<br />\n"
 "<br />\n"
 "<br />\n"
@@ -521,10 +521,10 @@ msgstr ""
 "{$abstractTermIfEnabled} <br />\n"
 "{$submissionAbstract}"
 
-msgid "emails.reviewRequestRemindAutoOneclick.subject"
+msgid "emails.reviewResponseOverdueAutoOneclick.subject"
 msgstr "Solicitude de revisión do manuscrito"
 
-msgid "emails.reviewRequestRemindAuto.description"
+msgid "emails.reviewResponseOverdueAuto.description"
 msgstr ""
 "Este correo electrónico envíase automaticamente cando transcorre a data "
 "límite da confirmación dun revisor/a (consulte Opcións de revisión en "
@@ -532,9 +532,9 @@ msgstr ""
 "clic está desactivado. As tarefas programadas deben estar habilitadas e "
 "configuradas (consulte o arquivo de configuración do sitio)."
 
-msgid "emails.reviewRequestRemindAuto.body"
+msgid "emails.reviewResponseOverdueAuto.body"
 msgstr ""
-"Estimado {$reviewerName},<br />\n"
+"Estimado {$recipientName},<br />\n"
 "Só un recordatorio da nosa solicitude de revisión do envío, "
 "&quot;{$submissionTitle}&quot; para {$contextName}. Esperabamos ter a túa "
 "resposta antes do {$responseDueDate}, e este correo electrónico xerouse e "
@@ -548,17 +548,17 @@ msgstr ""
 "<br />\n"
 "O prazo de envío da revisión é {$reviewDueDate}. <br />\n"
 "<br />\n"
-"URL do envío: {$submissionReviewUrl} <br />\n"
+"URL do envío: {$reviewAssignmentUrl} <br />\n"
 "<br />\n"
-"Nome de usuario: {$reviewerUserName} <br />\n"
+"Nome de usuario: {$recipientUsername} <br />\n"
 "<br />\n"
 "Grazas por considerar esta solicitude. <br />\n"
 "<br />\n"
 "<br />\n"
 "Atentamente, <br />\n"
-"{$editorialContactSignature} <br />\n"
+"{$signature} <br />\n"
 
-msgid "emails.reviewRequestRemindAuto.subject"
+msgid "emails.reviewResponseOverdueAuto.subject"
 msgstr "Solicitude de revisión do manuscrito"
 
 msgid "emails.reviewRequestOneclick.description"
@@ -572,24 +572,24 @@ msgstr ""
 
 msgid "emails.reviewRequestOneclick.body"
 msgstr ""
-"{$reviewerName}:<br />\n"
+"{$recipientName}:<br />\n"
 "<br />\n"
 "Creo que podes ser un excelente revisor do manuscrito, "
 "&quot;{$submissionTitle}&quot;, que se enviou a {$contextName}. A "
 "continuación insírese o resumo do envío e espero que consideres realizar "
 "esta importante tarefa para nós.<br />\n"
 "<br />\n"
-"Inicie sesión no sitio web da publicación antes do {$weekLaterDate} para "
+"Inicie sesión no sitio web da publicación antes do {$responseDueDate} para "
 "indicar se realizará ou non a revisión, así como para acceder á presentación "
 "e rexistrar a súa revisión e recomendación.<br />\n"
 "<br />\n"
 "A revisión debe estar rematada antes do {$reviewDueDate}.<br />\n"
 "<br />\n"
-"URL do envío: {$submissionReviewUrl} <br />\n"
+"URL do envío: {$reviewAssignmentUrl} <br />\n"
 "<br />\n"
 "Grazas por considerar esta solicitude.<br />\n"
 "<br />\n"
-"{$editorialContactSignature} <br />\n"
+"{$signature} <br />\n"
 "<br />\n"
 "<br />\n"
 "<br />\n"
