--- a/locale/uk_UA/emails.po
+++ b/locale/uk_UA/emails.po
@@ -27,10 +27,10 @@ msgstr "Запит на рецензування скасовано"
 msgid "emails.reviewRequestAttached.subject"
 msgstr "Запит на Рецензування Рукопису"
 
-msgid "emails.reviewRequestRemindAutoOneclick.subject"
+msgid "emails.reviewResponseOverdueAutoOneclick.subject"
 msgstr "Запит на Рецензування Рукопису"
 
-msgid "emails.reviewRequestRemindAuto.subject"
+msgid "emails.reviewResponseOverdueAuto.subject"
 msgstr "Запит на Рецензування Рукопису"
 
 msgid "emails.reviewRequestOneclick.subject"
@@ -42,7 +42,7 @@ msgstr "Запит на Рецензування Рукопису"
 msgid "emails.editorAssign.subject"
 msgstr "Призначення Редакторів"
 
-msgid "emails.publishNotify.subject"
+msgid "emails.issuePublishNotify.subject"
 msgstr "Опубліковано Нову Книгу"
 
 msgid "emails.reviewerRegister.subject"
@@ -63,7 +63,7 @@ msgstr "Підтвердження Скидання Пароля"
 msgid "emails.notification.subject"
 msgstr "Нове Повідомлення від {$siteTitle}"
 
-msgid "emails.reviewRequestRemindAuto.description"
+msgid "emails.reviewResponseOverdueAuto.description"
 msgstr ""
 "Цей лист надсилається автоматично, коли рецензент пропустив дату "
 "рецензування (Див Налаштування > Робочий процес > Рецензування > "
@@ -71,9 +71,9 @@ msgstr ""
 "відключено. Заплановані завдання повинні бути увімкнені та налаштовані (Див. "
 "файл налаштування сайту)."
 
-msgid "emails.reviewRequestRemindAuto.body"
+msgid "emails.reviewResponseOverdueAuto.body"
 msgstr ""
-"Шановна|Шановний {$reviewerName},<br />\n"
+"Шановна|Шановний {$recipientName},<br />\n"
 "Я вірю, що Ви могли б стати прекрасним рецензентом для рукопису "
 "&quot;{$submissionTitle}&quot;, надісланого до {$contextName}. Будь ласка, "
 "до {$responseDueDate} зайдіть на сайт видавництва, щоб повідомити, чи "
@@ -87,15 +87,15 @@ msgstr ""
 "<br />\n"
 "Ми хотіли б мати готову рецензію до {$reviewDueDate}.<br />\n"
 "<br />\n"
-"URL подання: {$submissionReviewUrl}<br />\n"
+"URL подання: {$reviewAssignmentUrl}<br />\n"
 "<br />\n"
-"Ім'я користувача: {$reviewerUserName}<br />\n"
+"Ім'я користувача: {$recipientUsername}<br />\n"
 "<br />\n"
 "Дякую, що розглянули цей запит.<br />\n"
 "<br />\n"
 "<br />\n"
 "З Повагою,<br />\n"
-"{$editorialContactSignature}<br />\n"
+"{$signature}<br />\n"
 
 msgid "emails.reviewRequestOneclick.description"
 msgstr ""
@@ -108,24 +108,24 @@ msgstr ""
 
 msgid "emails.reviewRequestOneclick.body"
 msgstr ""
-"{$reviewerName}:<br />\n"
+"{$recipientName}:<br />\n"
 "<br />\n"
 "Я вірю, що Ви могли б стати прекрасним рецензентом для рукопису, "
 "&quot;{$submissionTitle}&quot; надісланого до {$contextName}. Нижче подана "
 "анотація цієї праці, і маю надію, Ви розглянете можливість виконання цієї "
 "важливої роботи для нас.<br />\n"
 "<br />\n"
-"Будь ласка, до {$weekLaterDate} зайдіть на сайт видавництва, щоб повідомити, "
+"Будь ласка, до {$responseDueDate} зайдіть на сайт видавництва, щоб повідомити, "
 "чи візьметеся Ви за цю рецензію, а також для того, щоб отримати доступ до "
 "подання, записати Вашу рецензію та рекомендацію. <br />\n"
 "<br />\n"
 "Ми хотіли б мати готову рецензію до {$reviewDueDate}.<br />\n"
 "<br />\n"
-"URL подання: {$submissionReviewUrl}<br />\n"
+"URL подання: {$reviewAssignmentUrl}<br />\n"
 "<br />\n"
 "Дякую, що розглянули цей запит.<br />\n"
 "<br />\n"
-"{$editorialContactSignature}<br />\n"
+"{$signature}<br />\n"
 "<br />\n"
 "<br />\n"
 "<br />\n"
@@ -145,7 +145,7 @@ msgstr ""
 
 msgid "emails.reviewRequest.body"
 msgstr ""
-"Шановний {$reviewerName},<br />\n"
+"Шановний {$recipientName},<br />\n"
 "<br />\n"
 "{$messageToReviewer}<br />\n"
 "<br />\n"
@@ -155,13 +155,13 @@ msgstr ""
 "<br />\n"
 "Ми хотіли б мати готову рецензію до {$reviewDueDate}.<br />\n"
 "<br />\n"
-"URL подання: {$submissionReviewUrl}<br />\n"
+"URL подання: {$reviewAssignmentUrl}<br />\n"
 "<br />\n"
 "Дякую, що розглянули цей запит.<br />\n"
 "<br />\n"
 "<br />\n"
 "З Повагою,<br />\n"
-"{$editorialContactSignature}<br />\n"
+"{$signature}<br />\n"
 
 msgid "emails.editorAssign.description"
 msgstr ""
@@ -171,14 +171,14 @@ msgstr ""
 
 msgid "emails.editorAssign.body"
 msgstr ""
-"{$editorialContactName}:<br />\n"
+"{$recipientName}:<br />\n"
 "<br />\n"
 "Як редактор розділу Ви були призначені керувати процесом редакційного "
 "опрацювання подання &quot;{$submissionTitle}&quot; до {$contextName}.  <br />"
 "\n"
 "<br />\n"
 "URL подання: {$submissionUrl}<br />\n"
-"Ім'я користувача: {$editorUsername}<br />\n"
+"Ім'я користувача: {$recipientUsername}<br />\n"
 "<br />\n"
 "Дякую,"
 
@@ -197,7 +197,7 @@ msgstr ""
 "Якщо у вас є якісь питання, будь ласка, зв'яжіться зі мною. Дякуємо, що "
 "розглянули це видавництво як місце для публікації вашої роботи.<br />\n"
 "<br />\n"
-"{$editorialContactSignature}"
+"{$signature}"
 
 msgid "emails.submissionAckNotUser.subject"
 msgstr "Подяка за подання рукопису"
@@ -211,7 +211,7 @@ msgstr ""
 
 msgid "emails.submissionAck.body"
 msgstr ""
-"{$authorName}:<br />\n"
+"{$recipientName}:<br />\n"
 "<br />\n"
 "Дякуємо, що надіслали рукопис &quot;{$submissionTitle}&quot; для публікації "
 "у {$contextName}. Електронна система управління виданнями, яку ми "
@@ -220,24 +220,24 @@ msgstr ""
 "своїм іменем користувача:<br />\n"
 "<br />\n"
 "URL рукопису: {$submissionUrl}<br />\n"
-"Ім'я користувача: {$authorUsername}<br />\n"
+"Ім'я користувача: {$recipientUsername}<br />\n"
 "<br />\n"
 "Якщо Ви маєте запитання, будь ласка, звертайтеся до мене. Дякую за вибір "
 "цього видавництва як місця публікації своєї роботи.<br />\n"
 "<br />\n"
-"{$editorialContactSignature}"
+"{$signature}"
 
 msgid "emails.submissionAck.subject"
 msgstr "Подяка за подання рукопису"
 
-msgid "emails.publishNotify.description"
+msgid "emails.issuePublishNotify.description"
 msgstr ""
 "Цей лист надсилається зареєстрованим читачам засобами посилання \"Сповістити "
 "користувачів\" у теці редактора. Лист інформує читачів про вихід нової книги "
 "та запрошує їх відвідати сайт журналу, скориставшись відповідним "
 "URL-посиланням."
 
-msgid "emails.publishNotify.body"
+msgid "emails.issuePublishNotify.body"
 msgstr ""
 "Шановні читачі!<br />\n"
 "<br />\n"
@@ -246,7 +246,7 @@ msgstr ""
 "ознайомитись з монографіями та іншими цікавими Вам матеріалами.<br />\n"
 "<br />\n"
 "Дякуємо, що продовжуєте цікавитись нашою роботою,<br />\n"
-"{$editorialContactSignature}"
+"{$signature}"
 
 msgid "emails.reviewerRegister.description"
 msgstr ""
@@ -268,11 +268,11 @@ msgstr ""
 "усієї подальшої роботи з журналом через його веб-сайт. Серед іншого, Ви "
 "можете оновити свій профіль та вказати власні наукові інтереси.<br />\n"
 "<br />\n"
-"Ім'я користувача: {$username}<br />\n"
+"Ім'я користувача: {$recipientUsername}<br />\n"
 "Пароль: {$password}<br />\n"
 "<br />\n"
 "Дякую,<br />\n"
-"{$principalContactSignature}"
+"{$signature}"
 
 msgid "emails.userValidate.description"
 msgstr ""
@@ -282,7 +282,7 @@ msgstr ""
 
 msgid "emails.userValidate.body"
 msgstr ""
-"Вітаємо, {$userFullName}<br />\n"
+"Вітаємо, {$recipientName}<br />\n"
 "<br />\n"
 "Ви створили обліковий запис на сайті {$contextName}, але перш ніж Ви зможете "
 "користуватися ним, необхідно підтвердити вказану під час реєстрації email "
@@ -291,7 +291,7 @@ msgstr ""
 "{$activateUrl}<br />\n"
 "<br />\n"
 "З Повагою,<br />\n"
-"{$principalContactSignature}"
+"{$signature}"
 
 msgid "emails.userRegister.description"
 msgstr ""
@@ -301,18 +301,18 @@ msgstr ""
 
 msgid "emails.userRegister.body"
 msgstr ""
-"Вітаємо {$userFullName}<br />\n"
+"Вітаємо {$recipientName}<br />\n"
 "<br />\n"
 "Дякуємо Вам за реєстрацію користувачем {$contextName}. У цьому листі ми "
 "вказали Ваші Ім'я користувача та пароль, які будуть необхідні для роботи з "
 "цим журналом через сайт. В будь-який момент, Ви можете попросити, щоб ваш "
 "обліковий запис видалили. Для цього Вам достатньо зв'язатися зі мною.<br />\n"
 "<br />\n"
-"Ім'я користувача: {$username}<br />\n"
+"Ім'я користувача: {$recipientUsername}<br />\n"
 "Пароль: {$password}<br />\n"
 "<br />\n"
 "З Повагою,<br />\n"
-"{$principalContactSignature}"
+"{$signature}"
 
 msgid "emails.passwordReset.description"
 msgstr ""
@@ -325,10 +325,10 @@ msgstr ""
 "Ваш пароль для доступу до веб-сайту {$siteTitle} був успішно змінений. <br />"
 "\n"
 "<br />\n"
-"Ваше ім'я користувача: {$username}<br />\n"
+"Ваше ім'я користувача: {$recipientUsername}<br />\n"
 "Пароль: {$password}<br />\n"
 "<br />\n"
-"{$principalContactSignature}"
+"{$signature}"
 
 msgid "emails.passwordResetConfirm.description"
 msgstr ""
@@ -345,9 +345,9 @@ msgstr ""
 "пароль не буде змінений. Якщо Ви бажаєте скинути свій пароль, натисніть на "
 "посиланні нижче.<br />\n"
 "<br />\n"
-"Скинути мій пароль: {$url}<br />\n"
+"Скинути мій пароль: {$passwordResetUrl}<br />\n"
 "<br />\n"
-"{$principalContactSignature}"
+"{$signature}"
 
 msgid "emails.notification.description"
 msgstr ""
@@ -361,8 +361,8 @@ msgstr ""
 "<br />\n"
 "{$notificationContents}<br />\n"
 "<br />\n"
-"Посилання: {$url}<br />\n"
+"Посилання: {$notificationUrl}<br />\n"
 "<br />\n"
 "Цей електроний лист згенеровано автоматично, будь ласка, не відповідайте на "
 "нього.<br />\n"
-"{$principalContactSignature}"
+"{$signature}"
